# SERRASALMUS

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  PROJECT_STATUS.md  README.md  docker-compose.yml  install.sh  package.json  pyproject.toml  requirements.txt
src/serra_orgin/: __init__.py  cli.py  config.py  core.py  main.py
src/serra_orgin/agents/: __init__.py  base.py
src/serra_orgin/memory/: __init__.py  base.py
web_ui/: index.html  package.json  tailwind.config.js
web_ui/src/: App.tsx  index.css  main.tsx
